Added index template + updates

--- a/walk_a_dog/templates/walk_a_dog/add_walk.html
+++ b/walk_a_dog/templates/walk_a_dog/add_walk.html
@@ -3,8 +3,11 @@
 {% block content %}
 <form action="{% url 'add-walk' %}" method="POST">
 	{% csrf_token %}
-	{{ form.as_ul }}<br><br>
+	{{ form.as_ul }}
+	<br><br>
+
 	<input type="submit" value="Dodaj spacer"/>
 </form>
 
 {% endblock %}
+
