--- a/walk_a_dog/templates/walk_a_dog/index.html
+++ b/walk_a_dog/templates/walk_a_dog/index.html
@@ -2,8 +2,34 @@
 <!doctype html>
 
 <html>
-    <head><meta charset="utf-8"></head>
+    <head><meta charset="utf-8">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    </head>
     <body>
+    <div class="container-fluid">
+	<div class="row">
+		<div class="col-md-12">
+			<ul class="nav nav-tabs">
+				<li class="active">
+					<a href="{% url 'index' %}">Home</a>
+				</li>
+				<li>
+					<a href="#">Spacery</a>
+				</li>
+				<li class="disabled">
+					<a href="#">Edytuj profil</a>
+				</li>
+			</ul>
+		</div>
+	</div>
+    </div>
+
+    <script src="js/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/scripts.js"></script>
+
+
         <h1>
             <img src="{% static 'running_dexter.jpg' %}" width="200"/>
             WALK A DOG - FIND NEW FRIENDS!
