updated AddDetailsView and AddDogView

--- a/walk_a_dog/templates/walk_a_dog/index.html
+++ b/walk_a_dog/templates/walk_a_dog/index.html
@@ -5,6 +5,16 @@
     <head><meta charset="utf-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title>Walk a dog!</title>
+
+    <meta name="description" content="Source code generated using layoutit.com">
+    <meta name="author" content="LayoutIt!">
+
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
     <div class="container-fluid">
@@ -23,17 +33,17 @@
 			</ul>
 		</div>
 	</div>
-    </div>
+
 
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/scripts.js"></script>
 
 
-        <h1>
-            <img src="{% static 'running_dexter.jpg' %}" width="200"/>
-            WALK A DOG - FIND NEW FRIENDS!
-        </h1>
+        <h3>
+            <img src="{% static 'running_whippet.jpg' %}" width="300"/>
+            WALK A DOG - FIND NEW FRIENDS!<br>
+        </h3>
         {% block content %}
         {% endblock %}
 
@@ -46,6 +56,7 @@
 
             <a href="{% url 'register' %}"><input type="submit" value="ZAREJESTRUJ SIĘ"></a>
         {% endif %}
+    </div>
     </body>
 </html>
 
