added WalkView, JoinWalkView and templates

--- a/walk_a_dog/templates/walk_a_dog/index.html
+++ b/walk_a_dog/templates/walk_a_dog/index.html
@@ -25,7 +25,7 @@
 					<a href="{% url 'index' %}">Home</a>
 				</li>
 				<li>
-					<a href="#">Spacery</a>
+					<a href="{% url 'walks' %}">Spacery</a>
 				</li>
 				<li class="disabled">
 					<a href="#">Edytuj profil</a>
