--- a/walk_a_dog/templates/walk_a_dog/join_walk.html
+++ b/walk_a_dog/templates/walk_a_dog/join_walk.html
@@ -2,7 +2,10 @@
 
 {% block content %}
 
-<strong>Dołączyłeś do spaceru!</strong><br>
+<strong>Dołączyłeś do spaceru!</strong><br><br>
+
+
+<a href="{% url 'walks'%}">WRÓĆ DO SPACERÓW</a><br><br><br>
 
 
 {% endblock %}
