--- a/walk_a_dog/templates/walk_a_dog/index.html
+++ b/walk_a_dog/templates/walk_a_dog/index.html
@@ -28,7 +28,7 @@
 					<a href="{% url 'walks' %}">Spacery</a>
 				</li>
 				<li class="disabled">
-					<a href="#">Edytuj profil</a>
+					<a href="{% url 'modify-profile' %}">Edytuj profil</a>
 				</li>
 			</ul>
 		</div>
