--- a/walk_a_dog/templates/walk_a_dog/modify_profile.html
+++ b/walk_a_dog/templates/walk_a_dog/modify_profile.html
@@ -29,7 +29,7 @@
         <strong>Rasa:</strong> {{ dog.breed }}<br>
         <strong>Opis:</strong> {{ dog.description }}<br><br>
 
-        <a href="/walkadog/modify_dog/{{ dog.id }}" class = "btn btn-default">Zaktualizuj dane</a><br><br>
+        <a href="/walkadog/modify_dog/{{ dog.pk }}" class = "btn btn-default">Zaktualizuj dane</a><br><br>
     {% endfor %}
 </ul>
 
