--- a/walk_a_dog/templates/walk_a_dog/walks.html
+++ b/walk_a_dog/templates/walk_a_dog/walks.html
@@ -6,12 +6,13 @@
 
     <ul>
         {% for walk in walks %}
-            <li>{{ walk }} <a href="{% url 'join-walk' walk_id=walk.id %}">DOŁĄCZ DO SPACERU</a></li>
+        <li>{{ walk }} <a href="{% url 'join-walk' walk_id=walk.id %}">DOŁĄCZ DO SPACERU</a></li>
         {% endfor %}
 
     </ul>
 
-<a href="{% url 'add-walk' %}">DODAJ SPACER</a><br><br><br>
+<a href="{% url 'add-walk' %}">DODAJ SPACER</a><br><br>
+<a href="{% url 'search-walk' %}">SZUKAJ SPACERU</a><br><br><br>
 
 
 {% endblock %}
