--- a/walk_a_dog/templates/walk_a_dog/profile.html
+++ b/walk_a_dog/templates/walk_a_dog/profile.html
@@ -3,10 +3,10 @@
 
 {% block content %}
 
-<strong>Nazwa użtkownika:</strong> {{ user.username }} <br>
+<strong>Nazwa użytkownika:</strong> {{ user.username }} <br>
 <strong>Imię:</strong> {{ user.first_name }} <br>
 <strong>Nazwisko:</strong> {{ user.last_name }}<br>
-<strong>e-mai:</strong> {{ user.email }}<br><br>
+<strong>e-mail:</strong> {{ user.email }}<br><br>
 
 
 <a href="{% url 'add-details' %}">Uzupełnij profil</a>
