--- a/walk_a_dog/templates/walk_a_dog/dog_details.html
+++ b/walk_a_dog/templates/walk_a_dog/dog_details.html
@@ -9,6 +9,7 @@
         <strong>Rok urodzenia:</strong> {{ dog.year_of_birth }}<br>
         <strong>Rasa:</strong> {{ dog.breed }}<br>
         <strong>Opis:</strong> {{ dog.description }}<br>
+        <strong>Zdjęcie</strong> <img scr="/{{ dog.avatar }}"/><br>
     {% endfor %}
 </ul>
 
