--- a/walk_a_dog/templates/walk_a_dog/modify_profile.html
+++ b/walk_a_dog/templates/walk_a_dog/modify_profile.html
@@ -25,6 +25,7 @@
 
         <strong>Imię:</strong> {{ dog.name }} <br>
         <strong>Płeć:</strong> {{ dog.get_gender_display }} <br>
+        <strong>Zdjęcie:</strong> <img src="/{{ dog.avatar }}" width="300"/><br><br>
         <strong>Rok urodzenia:</strong> {{ dog.year_of_birth }}<br>
         <strong>Rasa:</strong> {{ dog.breed }}<br>
         <strong>Opis:</strong> {{ dog.description }}<br><br>
