--- a/walk_a_dog/templates/walk_a_dog/dog.html
+++ b/walk_a_dog/templates/walk_a_dog/dog.html
@@ -7,7 +7,7 @@
     <strong>Rok urodzenia:</strong> {{ dog.year_of_birth }}<br>
     <strong>Rasa:</strong> {{ dog.breed }}<br>
     <strong>Opis:</strong> {{ dog.description }}<br>
-    <strong>Właściciel</strong> {{ dog.user }}
-
+    <strong>Właściciel:</strong> {{ dog.user }}<br>
+    <strong>Zdjęcie:</strong> <img src="/{{ dog.avatar }}" width="300"/><br><br>
 
 {% endblock %}
