--- a/walk_a_dog/templates/walk_a_dog/modify_dog.html
+++ b/walk_a_dog/templates/walk_a_dog/modify_dog.html
@@ -1,7 +1,7 @@
 {% extends 'walk_a_dog/index.html' %}
 
 {% block content %}
-<form action="" method="POST">
+<form action="" method="POST" enctype="multipart/form-data">
 {% csrf_token %}
     {{ form.as_ul }}
     <input type="submit" value="Zapisz">
